# Reg-G-VGC

./: fact_run_noofi.csv  pyproject.toml  round_list_noofi.csv  team_list_noofi.csv
EXTRACCION/: fact_run_ofi.csv  round_list_ofi.csv  scrap-noofi.py  scrap_ofi.py  team_list_ofi.csv
TR-CLUSTER/: cluster.R  fact_run.csv  rounds.csv  team_archetypes.csv
